src/main/java/fr/alten/test_back/error/ResourceNotFoundException.java
package fr.alten.test_back.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

/**
 * Custom exception generating a 404 not found error.
 *
 * @author Amarechal.
 */
@ResponseStatus(value = HttpStatus.NOT_FOUND)
public class ResourceNotFoundException extends RuntimeException {

    public ResourceNotFoundException(String message) {
        super(message);
    }
}
